# flatbuffer-mobilenet

./: .gitignore  CMakeLists.txt  README.org  flatc
include/: schema_generated.h
src/: CMakeLists.txt  model_read.cpp
